# codec2-dev

./: .gitignore  .travis.yml  CMakeLists.txt  INSTALL  Makefile.in  README  README.cmake  README.md  README_cohpsk.md  README_data.md  README_fdmdv.md  README_fdmdv.txt  README_freedv.md  README_fsk.md  README_fsk.txt  README_ofdm.md  README_ofdm.txt  codec2.pc.in  configure  notes_and_todo_tdma
codec2-dev/: CMakeLists.txt  INSTALL  Makefile.in  README  README.cmake  README_fdmdv.txt  README_fsk.txt  README_ofdm.txt  aclocal.m4  codec2.pc.in  configure  notes_and_todo_tdma
codec2-dev/asterisk/: README  codec_codec2.c
codec2-dev/asterisk-11/: asterisk-11.8.1-opus-codec2.patch
codec2-dev/debian/: codec2.doc-base.EX  rules
codec2-dev/fltk/: Makefile  fl_fdmdv.cxx
codec2-dev/misc/: 16_8_short.c  CMakeLists.txt  extract.c  generate_wideband_map.c  mksine.c  t16_8_short.c  tlininterp.c  vqtrain.c
codec2-dev/octave/: HRA_112_56.txt  HRA_56_56.txt  README_fdmdv.txt  adc_plot_spec.m  adc_sfdr_ut.m  adcres.m  autotest.m  bpf.m  bpsk.m  bpsk_hf.m  bpsk_hf_fs.m  c2wideband_batch.m  c2wideband_fbf.m  ciccomp.m  cml.patch  cohpsk.m  cohpsk_ch_fading.m  cohpsk_demod_plot.m  cohpsk_frame_design.ods  crc16.m  dacres.m  dec_pager.m  df_mixer.m  diff_codec.m  dl_align.m  doppler_spread.m  fdmdv.m  fdmdv_demod.m  fdmdv_demod_c.m  fdmdv_mod.m  fdmdv_ut.m  fdmdv_ut_coh.m  fdmdv_ut_freq_off.m  fm.m  fmfsk.m  fsk.m  fsk4.m  fsk_basic.m  fsk_basic_alt.m  fsk_cont_phase.m  (+100 more)
codec2-dev/portaudio/: pa_recplay.c
codec2-dev/raw/: sine1k_2ms_delay_2Hz_spread.raw
codec2-dev/script/: fsk_results.py  fskrx.sh  fskrxcots.sh  fsktx.sh  fsktxcots.sh  menu.sh  ofdm_stack_use.py  separate_all.sh
codec2-dev/src/: CMakeLists.txt  H2064_516_sparse.h  H2064_516_sparse_test.h  HRA_112_112.h  HRA_112_112_test.h  Makefile.am  Makefile.in  _kiss_fft_guts.h  ampexp.c  ampexp.h  c2dec.c  c2demo.c  c2enc.c  c2sim.c  c2wideband.c  c2wideband.h  codebook.c  codebookd.c  codebookdt.c  codebookge.c  codebookjvm.c  codebooknewamp1.c  codebookres.c  codebookvq.c  codebookvqanssi.c  codec2.c  codec2.h  codec2_cohpsk.h  codec2_fdmdv.h  codec2_fft.c  codec2_fft.h  codec2_fifo.h  codec2_fm.h  codec2_internal.h  codec2_ofdm.h  cohpsk.c  cohpsk_ch.c  cohpsk_defs.h  cohpsk_demod.c  cohpsk_get_test_bits.c  (+118 more)
codec2-dev/stm32/: CMakeLists.txt  Makefile  README.cmake  README.txt  stm32_flash.ld
codec2-dev/unittest/: CMakeLists.txt  Makefile.am  Makefile.in  c2validate.c  compare_ints.c  create_interleaver.c  dvdongle2.c  extract.c  fdmdv_mem.c  genlsp.c  genphdata.c  genres.c  ldpc_check  lspd456.txt  lspd78.txt  lspsync.c  mksine.c  noise_samples.h  ofdm_check  ofdm_mem.c  ofdm_stack.c  pa_rec.c  pre.c  raw2h.c  scalarlsptest.c  speexlsptest.c  t16_8.c  t16_8_short.c  t16_short_8.c  t48_8.c  tc2wideband.c  tcodec2.c  tcohpsk.c  tcontphase.c  tdct2.c  tdec.c  tdeframer.c  test_cohpsk_ch.c  tfdmdv.c  tfifo.c  (+17 more)
codec2-dev/win32/: Makefile  codec2.lib
misc/: 16_8_short.c  CMakeLists.txt  est_n0.c  extract.c  genlsp.c  hpf.c  speexnoisesup.c  timpulse.c  tlininterp.c  tnlp.c  vq_binary_switch.c  vq_mbest.c  vqtrain.c
src/: CMakeLists.txt  H2064_516_sparse.h  HRA_112_112.c  HRA_112_112.h  H_212_158.c  H_212_158.h  Makefile.am  Makefile.in  ampexp.c  ampexp.h  bpf.h  bpfb.h  c2dec.c  c2demo.c  c2enc.c  c2server.c  c2sim.c  c2wideband.c  c2wideband.h  ch.c  codebookd.c  codebookdt.c  codebookjnd.c  codebookjvm.c  codebooknewamp1_energy.c  codebookvq.c  codec2.c  codec2.h  codec2_cohpsk.h  codec2_fdmdv.h  codec2_fft.c  codec2_fft.h  codec2_fifo.c  codec2_fifo.h  codec2_fm.h  codec2_internal.h  codec2_math.h  codec2_math_arm.c  codec2_ofdm.h  cohpsk.c  (+164 more)
src/codebook/: dlsp1.txt  dlsp10.txt  dlsp2.txt  dlsp3.txt  dlsp6.txt  dlsp7.txt  dlsp8.txt  lspdt.txt  lspdt5-10.txt  lspjvm1.txt  lspjvm2.txt  lspjvm3.txt  lspmelvq1.txt  lspmelvq3.txt  lspvqanssi2.txt  lspvqanssi3.txt  mel1.txt  mel4.txt  mel5.txt  mel6.txt  train_120_1_sq.txt  train_120_2_sq.txt
stm32/: CMakeLists.txt  MENU.txt  Makefile  README.cmake  README.md  README.txt  sm1000_user_manual.md  stm32_flash.ld  stm32_ram.ld
stm32/cmake/: STM32_Lib.cmake  STM32_Toolchain.cmake  cmake_header.txt  gencodebooks.cmake
stm32/doc/: sm1000_manual.md
stm32/inc/: debugblinky.h  fast_dac_ut.c  fdmdv_dump_sync.c  find_unused_mem.h  gdb_stdio.h  iir_duc.h  iir_tuner.h  leds_switches.h  si53xx.h  sm1000_leds_switches.h  sm1000_leds_switches_ut.c  sm1000_main.c  sounds.h  stm32f4_adc.c  stm32f4_adc.h  stm32f4_adc_tuner.c  stm32f4_adc_tuner.h  stm32f4_dac.c  stm32f4_dac.h  stm32f4_dacduc.c  stm32f4_dacduc.h  stm32f4_dacloduc.c  stm32f4_usart.h  stm32f4_usb_vcp.h  tm_stm32f4_gpio.h  tm_stm32f4_mco_output.h
stm32/src/: adc_rec.c  adc_rec_usb.c  adc_sd.c  adc_sfdr_ut.c  adcdac_ut.c  codec2_profile.c  dac_it.c  dac_play.c  dac_ut.c  dac_ut_fast.c  debugblinky.c  fast_dac_ut.c  fdmdv_dump_rt.c  fdmdv_profile.c  fft_test.c  find_unused_mem.c  freedv_rx_profile.c  freedv_tx_profile.c  gdb_stdio.c  iir_duc.c  iir_tuner.c  init.c  main.c  memtools.c  power_ut.c  si5351_ut.c  si53xx.c  sm1000_leds_switches.c  sm1000_main.c  sm2000_adc_dump.c  sm2000_rxdemo.c  sm2000_stw.c  sounds.c  sounds.h  startup_stm32f4xx.s  stm32f4_adc.c  stm32f4_adc_tuner.c  stm32f4_dac.c  stm32f4_dacduc.c  stm32f4_machdep.c  (+13 more)
stm32/stlink/: elfsym.c  elfsym.h
stm32/support/: hex2dfu.py
stm32/unittest/: README_unittest.md  README_unittest.txt  run_unittest
stm32/usb_conf/: usb_bsp.c  usb_conf.h  usbd_desc.c  usbd_usr.c
unittest/: CMakeLists.txt  Makefile.am  Makefile.in  README  c2validate.c  c2validate.h  check_comp.sh  check_peak.sh  compare_ints.c  create_interleaver.c  est_n0.sh  est_n0.sh.in  extract.c  fading_files.sh  fdmdv_mem.c  freedv_700d_comprx.c  ge_train.c  genampdata.c  genlsp.c  genphdata.c  genres.c  ldpc_check  lspd678910.txt  lspd910.txt  lspsync.c  lsptest.c  mksine.c  noise_samples.h  ofdm_check  ofdm_fade.sh  ofdm_fade.sh.in  ofdm_fade_dpsk.sh  ofdm_fade_dpsk.sh.in  ofdm_mem.c  ofdm_phase_est_bw.sh  ofdm_phase_est_bw.sh.in  ofdm_stack.c  ofdm_time_sync.sh  ofdm_time_sync.sh.in  ota_auto.sh  (+63 more)
(+510 files in other folders)
